--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 /.pnp
 .pnp.js
 
-.idea/
+*/node_modules
+.idea
 
 # testing
 /coverage
@@ -19,6 +20,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.idea/workspace.xml
 
 npm-debug.log*
 yarn-debug.log*
