--- a/fitnesscoachingBackend/package.json
+++ b/fitnesscoachingBackend/package.json
@@ -15,8 +15,9 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "mongodb": "^6.2.0",
-    "mongoose": "^8.0.1"
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
