--- a/fitnesscoachingBackend/package.json
+++ b/fitnesscoachingBackend/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "mongodb": "^6.2.0",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
